# md1imgpy

./: .gitignore  README.md  format.sh  mypi.ini  pyproject.toml
.github/workflows/: md1imgpy.yml
md1imgpy/: __init__.py  __main__.py  config.py  exceptions.py  image.py  main.py  packer.py  unpacker.py  utils.py
md1imgpy/structures/: __init__.py  header.py
